[package]
name = "rcop"
description = "command line utility to validate commit messages following conventionalcommits.org"
homepage = "https://github.com/matthiaskainer/rcop"
repository = "https://github.com/matthiaskainer/rcop"
license-file = "LICENSE"
readme = "Readme.md"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
prettytable = "0.10.0"
regex = "1.7.1"
